Converting Kelvin to F

--- a/weatherAngular/src/app/weather-display/weather-display.component.html
+++ b/weatherAngular/src/app/weather-display/weather-display.component.html
@@ -1,1 +1,6 @@
-<div *ngIf="info"></div>
+<div *ngIf="info">
+    <h4>The weather for {{info.name | uppercase}} is as follows:</h4>
+
+
+    <button type="button" id="ForC">{{</button>
+</div>
