--- a/weatherAngular/src/app/weather-display/weather-display.component.html
+++ b/weatherAngular/src/app/weather-display/weather-display.component.html
@@ -1,6 +1,21 @@
 <div *ngIf="weatherInfo">
     <h4>The weather for {{weatherInfo.name | uppercase}} is as follows:</h4>
-
+    <p>The sky is {{weatherInfo.weather[0].description}}</p>
+    <ul>Temperature in {{currentTempScale}}
+        <li>
+            MIN: {{info.temp.min}}
+        </li>
+        <li>
+            CURRENT: {{info.temp.curr}}
+        </li>
+        <li>
+            MAX: {{info.temp.max}}
+        </li>
+    </ul>
+    <p>The windspeed is {{weatherInfo.wind.speed}} miles per hour</p>
+    <p>Wind is blowing in the <span {{rotation}}>🠕</span></p>
+    <p>Wind can gust up to {{weatherInfo.wind.gust}} miles per hour</p>
     <label for="ForC">Current temperature scale {{currentTempScale}}</label>
     <button type="button" id="ForC" (click)="changeTempScale()">Change scale</button>
+    <!-- Copy for arrow wind direcion ➔ -->
 </div>
